feat(mcp): mcp support auth
