# internal/bff-service/model/response/mcp.go
@@ -3,23 +3,26 @@ package response
 import (
 	"github.com/ThinkInAIXYZ/go-mcp/protocol"
 	"github.com/UnicomAI/wanwu/internal/bff-service/model/request"
+	"github.com/UnicomAI/wanwu/pkg/util"
 )
 
 type MCPSelect struct {
-	UniqueId      string         `json:"uniqueId"`    // 随机unique id(每次动态生成)
-	MCPID         string         `json:"mcpId"`       // mcpId
-	MCPSquareID   string         `json:"mcpSquareId"` // 广场mcpId(非空表示来源于广场)
-	Name          string         `json:"name"`        // 名称
-	Type          string         `json:"type"`
-	ToolId        string         `json:"toolId"`                                           // 工具id
-	ToolName      string         `json:"toolName"`                                         // 工具名称
-	ToolType      string         `json:"toolType" validate:"required,oneof=mcp mcpserver"` // 工具类型
-	Description   string         `json:"description"`                                      // 描述
-	ServerFrom    string         `json:"serverFrom"`                                       // 来源
-	ServerURL     string         `json:"serverUrl"`                                        // sseUrl
-	StreamableURL string         `json:"streamableUrl"`                                    // streamableUrl
-	Transport     string         `json:"transport"`                                        // 传输协议
-	Avatar        request.Avatar `json:"avatar"`                                           // 图标
+	UniqueId      string                 `json:"uniqueId"`    // 随机unique id(每次动态生成)
+	MCPID         string                 `json:"mcpId"`       // mcpId
+	MCPSquareID   string                 `json:"mcpSquareId"` // 广场mcpId(非空表示来源于广场)
+	Name          string                 `json:"name"`        // 名称
+	Type          string                 `json:"type"`
+	ToolId        string                 `json:"toolId"`                                           // 工具id
+	ToolName      string                 `json:"toolName"`                                         // 工具名称
+	ToolType      string                 `json:"toolType" validate:"required,oneof=mcp mcpserver"` // 工具类型
+	Description   string                 `json:"description"`                                      // 描述
+	ServerFrom    string                 `json:"serverFrom"`                                       // 来源
+	ServerURL     string                 `json:"serverUrl"`                                        // sseUrl
+	StreamableURL string                 `json:"streamableUrl"`                                    // streamableUrl
+	Transport     string                 `json:"transport"`                                        // 传输协议
+	Avatar        request.Avatar         `json:"avatar"`                                           // 图标
+	ApiAuth       util.ApiAuthWebRequest `json:"apiAuth" validate:"required"`                      // api身份认证
+	Headers       map[string]string      `json:"headers"`                                          // 请求头
 }
 
 type MCPToolList struct {
@@ -34,10 +37,13 @@ type MCPDetail struct {
 
 // MCPInfo MCP自定义信息
 type MCPInfo struct {
-	MCPID         string `json:"mcpId"`         // mcpId
-	SSEURL        string `json:"sseUrl"`        // SSE URL
-	StreamableURL string `json:"streamableUrl"` // Streamable HTTP URL
-	Transport     string `json:"transport"`     // 传输协议: "sse" 或 "streamable"
+	MCPID         string                 `json:"mcpId"`         // mcpId
+	Type          string                 `json:"type"`          // type: mcp
+	SSEURL        string                 `json:"sseUrl"`        // SSE URL
+	StreamableURL string                 `json:"streamableUrl"` // Streamable HTTP URL
+	Transport     string                 `json:"transport"`     // 传输协议: "sse" 或 "streamable"
+	ApiAuth       util.ApiAuthWebRequest `json:"apiAuth"`       // api身份认证
+	Headers       map[string]string      `json:"headers"`       // 请求头
 	MCPSquareInfo
 }
 
